--- a/Aufgabe1/index.html
+++ b/Aufgabe1/index.html
@@ -20,7 +20,7 @@
     <p>Subscribe to our new apprentice @luana.piopstl on Instagram.  </p>
 
         <video width="520" height="440" autoplay muted loop="1">
-            <source src="Tattoovideo.MP4" type="video/mp4">
+            <source src="Tattoovideo.mp4" type="video/mp4">
           </video>
         
 </body>
